@@ -103,6 +103,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Parser tests no longer fail when $wgExternalLinkTarget is set in LocalSettings
 * (bug 15391) catch DBQueryErrors on external storage insertion. This avoids error 
   messages on save were the edit in fact is saved.
+* (bug 17184) Remove duplicate "z" accesskey in MonoBook
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
